fix(#86): getFirst 함수 get(0)으로 수정